[metadata]
# replace with your username:
name = IMED
version = 0.0.1.1
author = Jacob Felding
author_email = jfelding@gmail.com
description = Image Euclidean Distance and Standardizing Transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfelding/IMED
project_urls =
    Bug Tracker = https://github.com/jfelding/IMED/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
